force-app/main/default/objects/NewWork_Unit__c/NewWork_Unit__c.object-meta.xml
<CustomObject>
    <label>Work Unit</label>
    <nameField>
        <label>Work Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>