force-app/main/default/objects/NewWork_Unit__c/fields/Work_Unit__c.field-meta.xml
<CustomField>
    <fullName>Work_Unit__c</fullName>
    <label>Work Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>