force-app/main/default/objects/NewWork_Unit__c/fields/WU_Number__c.field-meta.xml
<CustomField>
    <fullName>WU_Number__c</fullName>
    <displayFormat>W-{000000}</displayFormat>
    <label>WU Number</label>
    <type>AutoNumber</type>
</CustomField>